--- a/package.json
+++ b/package.json
@@ -1,70 +1,71 @@
 {
-  "name": "flokidao-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@binance-chain/bsc-connector": "^1.0.0",
-    "@binance-chain/bsc-use-wallet": "^0.8.1",
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
-    "@pancakeswap-libs/uikit": "^0.29.4",
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.20",
-    "@types/styled-components": "^5.1.18",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.8",
-    "dotenv": "^10.0.0",
-    "framer-motion": "4",
-    "react": "^17.0.2",
-    "react-countup": "^6.1.0",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.2.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.1.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.6.1",
-    "web3-react": "^5.0.5",
-    "web3-utils": "^1.6.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "sass": "^1.45.0"
-  }
+    "name": "flokidao-app",
+    "homepage": "https://flokidao.io/",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@binance-chain/bsc-connector": "^1.0.0",
+        "@binance-chain/bsc-use-wallet": "^0.8.1",
+        "@chakra-ui/icons": "^1.1.1",
+        "@chakra-ui/react": "^1.7.3",
+        "@emotion/react": "11",
+        "@emotion/styled": "11",
+        "@pancakeswap-libs/uikit": "^0.29.4",
+        "@reduxjs/toolkit": "^1.7.1",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/jest": "^26.0.15",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-redux": "^7.1.20",
+        "@types/styled-components": "^5.1.18",
+        "@web3-react/core": "^6.1.9",
+        "@web3-react/injected-connector": "^6.0.7",
+        "@web3-react/walletconnect-connector": "^6.2.8",
+        "dotenv": "^10.0.0",
+        "framer-motion": "4",
+        "react": "^17.0.2",
+        "react-countup": "^6.1.0",
+        "react-dom": "^17.0.2",
+        "react-helmet-async": "^1.2.2",
+        "react-icons": "^4.3.1",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.1.0",
+        "react-scripts": "4.0.3",
+        "styled-components": "^5.3.3",
+        "typescript": "^4.1.2",
+        "web-vitals": "^1.0.1",
+        "web3": "^1.6.1",
+        "web3-react": "^5.0.5",
+        "web3-utils": "^1.6.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "sass": "^1.45.0"
+    }
 }
