--- a/.env
+++ b/.env
@@ -1,16 +1,3 @@
 PORT=4000
-REACT_APP_API_PROFILE = https://profile.pancakeswap.com
-REACT_APP_CHAIN_ID = "56"
-
-REACT_APP_NODE_1 = "localhost://4000"
-REACT_APP_NODE_2 = "https://bsc-dataseed2.defibit.io"
-REACT_APP_NODE_3 = "https://bsc-dataseed3.defibit.io"
-
-# Flavors.Tools GTAG
-REACT_APP_GTAG = "G-LEJ00HY5TD"
-
-
-BABEL_DISABLE_CACHE=1
-
-
-DISABLE_ESLINT_PLUGIN=true
+API_ENDPOINT="localhost://4000"
+REACT_APP_CHAIN_ID = "97"
