--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@chakra-ui/react": "^1.7.3",
         "@emotion/react": "11",
         "@emotion/styled": "11",
+        "@ethersproject/providers": "^5.5.2",
         "@pancakeswap-libs/uikit": "^0.29.4",
         "@reduxjs/toolkit": "^1.7.1",
         "@testing-library/jest-dom": "^5.11.4",
@@ -21,10 +22,12 @@
         "@types/react-dom": "^17.0.0",
         "@types/react-redux": "^7.1.20",
         "@types/styled-components": "^5.1.18",
+        "@walletconnect/web3-provider": "1.6.5",
         "@web3-react/core": "^6.1.9",
         "@web3-react/injected-connector": "^6.0.7",
         "@web3-react/walletconnect-connector": "^6.2.8",
         "dotenv": "^10.0.0",
+        "ethers": "5.4.0",
         "framer-motion": "4",
         "react": "^17.0.2",
         "react-countup": "^6.1.0",
@@ -39,7 +42,8 @@
         "web-vitals": "^1.0.1",
         "web3": "^1.6.1",
         "web3-react": "^5.0.5",
-        "web3-utils": "^1.6.1"
+        "web3-utils": "^1.6.1",
+        "web3modal": "^1.9.5"
     },
     "scripts": {
         "start": "react-scripts start",
